--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <li><a href="https://tooln.github.io/2342353804564647domainFinder6947673" target="_blank" draggable="true">Domain Finder</a></li>
     <li><a href="https://tooln.github.io/5848578654ClickableLinks254854645" target="_blank" draggable="true">Make Links Clickable</a></li>
     <li><a href="https://tooln.github.io/2545454IFRAMEchecker245243242" target="_blank" draggable="true">Clickjacking</a></li>
+    <li><a href="https://tooln.github.io/3546879URLOPENER354654" target="_blank" draggable="true">URL Opener</a></li>
     <li><a href="https://tooln.github.io/asdf534a36546546search31253as54df65sadf" target="_blank" draggable="true">OpenBugBounty</a></li>
   </ul>
 </div>
