--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <ul class="links" style="display:none;">
     <li><a href="https://tooln.github.io/32154654subrecon665653143364321654" target="_blank" draggable="true">SubRecon</a></li>
     <li><a href="https://tooln.github.io/3656asd21redirect6546a4sdf546" target="_blank" draggable="true">Redirect</a></li>
-    <li><a href="https://tooln.github.io/321sa3df1link3565sdf" target="_blank" draggable="true">Link Generate</a></li>
+    <li><a href="https://tooln.github.io/52465464XSS654684645" target="_blank" draggable="true">XSS Param Changer</a></li>
     <li><a href="https://tooln.github.io/345669866BLH3254654645asdfasdf" target="_blank" draggable="true">BLH</a></li>
     <li><a href="https://tooln.github.io/2342353804564647domainFinder6947673" target="_blank" draggable="true">Domain Finder</a></li>
     <li><a href="https://tooln.github.io/5848578654ClickableLinks254854645" target="_blank" draggable="true">Make Links Clickable</a></li>
