--- a/index.html
+++ b/index.html
@@ -97,15 +97,13 @@
 <div id="box">
   <h2 id="hack-text">Hacking in Progress...</h2>
   <ul class="links" style="display:none;">
-    <li><a href="https://tooln.github.io/32154654subrecon665653143364321654" target="_blank" draggable="true">SubRecon</a></li>
-    <li><a href="https://tooln.github.io/3656asd21redirect6546a4sdf546" target="_blank" draggable="true">Redirect</a></li>
-    <li><a href="https://tooln.github.io/52465464XSS654684645" target="_blank" draggable="true">XSS Param Changer</a></li>
-    <li><a href="https://tooln.github.io/345669866BLH3254654645asdfasdf" target="_blank" draggable="true">BLH</a></li>
-    <li><a href="https://tooln.github.io/2342353804564647domainFinder6947673" target="_blank" draggable="true">Domain Finder</a></li>
-    <li><a href="https://tooln.github.io/5848578654ClickableLinks254854645" target="_blank" draggable="true">Make Links Clickable</a></li>
-    <li><a href="https://tooln.github.io/2545454IFRAMEchecker245243242" target="_blank" draggable="true">Clickjacking</a></li>
-    <li><a href="https://tooln.github.io/3546879URLOPENER354654" target="_blank" draggable="true">URL Opener</a></li>
-    <li><a href="https://tooln.github.io/asdf534a36546546search31253as54df65sadf" target="_blank" draggable="true">OpenBugBounty</a></li>
+    <li><a href="https://tooln.github.io/SubRecon" target="_blank" draggable="true">SubRecon</a></li>
+    <li><a href="https://tooln.github.io/Redirect_link_Tester" target="_blank" draggable="true">Redirect</a></li>
+    <li><a href="https://tooln.github.io/XSS-Param-Changer" target="_blank" draggable="true">XSS Param Changer</a></li>
+    <li><a href="https://tooln.github.io/Broken_link_Cheacker" target="_blank" draggable="true">BLH</a></li>
+    <li><a href="https://tooln.github.io/Extract-Links-from-Text" target="_blank" draggable="true">Extract Links from Text</a></li>
+    <li><a href="https://tooln.github.io/Bulk-URL-Opener" target="_blank" draggable="true">Bulk URL Opener</a></li>
+    <li><a href="https://tooln.github.io/OpenBugBounty_Report_Checker" target="_blank" draggable="true">OpenBugBounty</a></li>
   </ul>
 </div>
 
