--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
   <h2 id="hack-text">Hacking in Progress...</h2>
   <ul class="links" style="display:none;">
     <li><a href="https://tooln.github.io/SubRecon" target="_blank" draggable="true">SubRecon</a></li>
-    <li><a href="https://tooln.github.io/Redirect_link_Tester" target="_blank" draggable="true">Redirect</a></li>
+    <li><a href="https://tooln.github.io/Redirect_link_Tester" target="_blank" draggable="true">Redirect Link Tester</a></li>
     <li><a href="https://tooln.github.io/XSS-Param-Changer" target="_blank" draggable="true">XSS Param Changer</a></li>
-    <li><a href="https://tooln.github.io/Broken_link_Cheacker" target="_blank" draggable="true">BLH</a></li>
+    <li><a href="https://tooln.github.io/Broken_link_Cheacker" target="_blank" draggable="true">BLH Tester</a></li>
     <li><a href="https://tooln.github.io/Extract-Links-from-Text" target="_blank" draggable="true">Extract Links from Text</a></li>
     <li><a href="https://tooln.github.io/Bulk-URL-Opener" target="_blank" draggable="true">Bulk URL Opener</a></li>
-    <li><a href="https://tooln.github.io/OpenBugBounty_Report_Checker" target="_blank" draggable="true">OpenBugBounty</a></li>
+    <li><a href="https://tooln.github.io/OpenBugBounty_Report_Checker" target="_blank" draggable="true">Open Bug Bounty</a></li>
   </ul>
 </div>
 
