--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <li><a href="https://tooln.github.io/Redirect_link_Tester" target="_blank" draggable="true">Redirect Link Tester</a></li>
     <li><a href="https://tooln.github.io/XSS-Param-Changer" target="_blank" draggable="true">XSS Param Changer</a></li>
     <li><a href="https://tooln.github.io/Broken_link_Cheacker" target="_blank" draggable="true">BLH Tester</a></li>
+    <li><a href="https://tooln.github.io/IFRAME-Checker" target="_blank" draggable="true">IFRAME Checker</a></li>
     <li><a href="https://tooln.github.io/Extract-Links-from-Text" target="_blank" draggable="true">Extract Links from Text</a></li>
     <li><a href="https://tooln.github.io/Bulk-URL-Opener" target="_blank" draggable="true">Bulk URL Opener</a></li>
     <li><a href="https://tooln.github.io/OpenBugBounty_Report_Checker" target="_blank" draggable="true">Open Bug Bounty</a></li>
