--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     <li><a href="https://tooln.github.io/OpenBugBounty_Report_Checker" target="_blank" draggable="true">Open Bug Bounty</a></li>
     <li><a href="https://tooln.github.io/SubfinderCommandGenerator" target="_blank" draggable="true">Subfinder Command Generator</a></li>
     <li><a href="https://tooln.github.io/HTTPutCommandGenerator" target="_blank" draggable="true">HTTPut Command Generator</a></li>
+    <li><a href="https://tooln.github.io/NucleiCommandGenerator" target="_blank" draggable="true">Nuclei Command Generator</a></li>
   </ul>
 </div>
 
