--- a/index.html
+++ b/index.html
@@ -7,42 +7,47 @@
 <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/3/34/Icon_hacker.png">
 <style>
   body {
-    background-color: #87CEEB; /* Sky Blue */
+    background: url('https://img.freepik.com/free-photo/fantasy-style-galaxy-background_23-2151114333.jpg?size=626&ext=jpg&ga=GA1.1.2113030492.1719964800&semt=ais_user') no-repeat center center fixed;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
+    color: #ffffff;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   #mouse {
     position: absolute;
     width: 50px;
     height: 50px;
-    background-color: #d4af37; /* Gold */
+    background-color: white; /* Light Yellow (Moon) */
     border-radius: 50%;
     cursor: pointer;
+    box-shadow: 0 0 10px rgba(240, 230, 140, 0.5);
   }
   #cat {
     position: absolute;
     width: 100px;
     height: 100px;
-    background-color: #A0522D; /* Sienna */
+    background-color: #FDB813; /* Orange Red (Sun) */
     border-radius: 50%;
     bottom: 0;
     right: 0;
+    box-shadow: 0 0 20px rgba(255, 69, 0, 0.5);
   }
   #box {
     display: none;
     position: absolute;
     width: 300px;
-    background-color: #fff;
-    border: 2px solid #000;
+    background-color: rgba(0, 0, 0, 0.8);
+    border: 2px solid #ffffff;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     padding: 20px;
     text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     overflow: hidden;
     animation: openBox 0.5s ease forwards;
@@ -76,17 +81,18 @@
   }
   .links li a {
     text-decoration: none;
-    color: blue;
+    color: #4caf50; /* Green text */
     font-weight: bold;
     display: inline-block;
     padding: 5px 10px;
-    background-color: #f0f0f0;
+    background-color: #444444;
     border-radius: 5px;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, color 0.3s ease;
     pointer-events: none; /* Disable pointer events on the links */
   }
   .links li a:hover {
-    background-color: #e0e0e0;
+    background-color: #555555;
+    color: #ffffff;
   }
 </style>
 </head>
