--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     <li><a href="https://tooln.github.io/XSS-Param-Changer" target="_blank" draggable="true">XSS Param Changer</a></li>
     <li><a href="https://tooln.github.io/FFUF-CMD-GENERATOR" target="_blank" draggable="true">FFUF CMD Generator</a></li>
     <li><a href="https://tooln.github.io/Extract-Links-from-Text" target="_blank" draggable="true">Extract Links from Text</a></li>
+    <li><a href="https://tooln.github.io/EmailSender" target="_blank" draggable="true">Email Sender</a></li>
     <li><a href="https://tooln.github.io/NucleiSorter" target="_blank" draggable="true">Nuclei Sorter</a></li>
     <li><a href="https://tooln.github.io/CommandFormatter" target="_blank" draggable="true">Command Generator</a></li>
     <li><a href="https://tooln.github.io/NucleiCommandGenerator" target="_blank" draggable="true">Nuclei Command Generator</a></li>
