--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     <li><a href="https://tooln.github.io/Extract-Links-from-Text" target="_blank" draggable="true">Extract Links from Text</a></li>
     <li><a href="https://tooln.github.io/EmailSender" target="_blank" draggable="true">Email Sender</a></li>
     <li><a href="https://tooln.github.io/NucleiSorter" target="_blank" draggable="true">Nuclei Sorter</a></li>
+    <li><a href="https://tooln.github.io/Nuclei-Notify" target="_blank" draggable="true">Nuclei Notify</a></li>
     <li><a href="https://tooln.github.io/CommandFormatter" target="_blank" draggable="true">Command Generator</a></li>
     <li><a href="https://tooln.github.io/NucleiCommandGenerator" target="_blank" draggable="true">Nuclei Command Generator</a></li>
     <li><a href="https://tooln.github.io/HTTPutCommandGenerator" target="_blank" draggable="true">HTTPut Command Generator</a></li>
