--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
     <li><a href="https://tooln.github.io/NucleiCommandGenerator" target="_blank" draggable="true">Nuclei Command Generator</a></li>
     <li><a href="https://tooln.github.io/HTTPutCommandGenerator" target="_blank" draggable="true">HTTPut Command Generator</a></li>
     <li><a href="https://tooln.github.io/SubfinderCommandGenerator" target="_blank" draggable="true">Subfinder Command Generator</a></li>
+    <li><a href="https://tooln.github.io/godaddy_domain_registration" target="_blank" draggable="true">Godaddy Domain Registration</a></li>
+
   </ul>
 </div>
 
