--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     <li><a href="https://tooln.github.io/Nuclei-Notify" target="_blank" draggable="true">Nuclei Notify</a></li>
     <li><a href="https://tooln.github.io/CommandFormatter" target="_blank" draggable="true">Command Generator</a></li>
     <li><a href="https://tooln.github.io/Crawl_link_Generator" target="_blank" draggable="true">Crawl link Generator</a></li>
+        <li><a href="https://tooln.github.io/Domain_Hunter_link_Opener" target="_blank" draggable="true">Domain Hunter link Opener</a></li>
     <li><a href="https://tooln.github.io/NucleiCommandGenerator" target="_blank" draggable="true">Nuclei Command Generator</a></li>
     <li><a href="https://tooln.github.io/HTTPutCommandGenerator" target="_blank" draggable="true">HTTPut Command Generator</a></li>
     <li><a href="https://tooln.github.io/SubfinderCommandGenerator" target="_blank" draggable="true">Subfinder Command Generator</a></li>
