--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
     <li><a href="https://tooln.github.io/OpenBugBounty_Report_Checker" target="_blank" draggable="true">Open Bug Bounty</a></li>
     <li><a href="https://tooln.github.io/Redirect_link_Tester" target="_blank" draggable="true">Redirect Link Tester</a></li>
     <li><a href="https://tooln.github.io/XSS-Param-Changer" target="_blank" draggable="true">XSS Param Changer</a></li>
-    <li><a href="https://tooln.github.io/FFUF-CMD-GENERATOR" target="_blank" draggable="true">FFUF CMD Generator</a></li>
+    <li><a href="https://tooln.github.io/FFUF-CMD-GENERATOR" target="_blank" draggable="true">FFUF CMD Generator V1</a></li>
+    <li><a href="https://tooln.github.io/FFUF_Command_Generator" target="_blank" draggable="true">FFUF CMD Generator V2</a></li>
     <li><a href="https://tooln.github.io/Extract-Links-from-Text" target="_blank" draggable="true">Extract Links from Text</a></li>
     <li><a href="https://tooln.github.io/EmailSender" target="_blank" draggable="true">Email Sender</a></li>
     <li><a href="https://tooln.github.io/NucleiSorter" target="_blank" draggable="true">Nuclei Sorter</a></li>
