--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <li><a href="https://tooln.github.io/Nuclei-Notify" target="_blank" draggable="true">Nuclei Notify</a></li>
     <li><a href="https://tooln.github.io/CommandFormatter" target="_blank" draggable="true">Command Generator</a></li>
     <li><a href="https://tooln.github.io/Crawl_link_Generator" target="_blank" draggable="true">Crawl link Generator</a></li>
-    <li><a href="https://tooln.github.io/Domain_Hunter_Online" target="_blank" draggable="true">Domain Hunter Online</a></li>
+    <li><a href="https://tooln.github.io/DomainFinder_Online" target="_blank" draggable="true">DomainFinder Online</a></li>
     <li><a href="https://tooln.github.io/Domain_Hunter_Output_Generator" target="_blank" draggable="true">Domain Hunter Output Generator</a></li>
     <li><a href="https://tooln.github.io/NucleiCommandGenerator" target="_blank" draggable="true">Nuclei Command Generator</a></li>
     <li><a href="https://tooln.github.io/HTTPutCommandGenerator" target="_blank" draggable="true">HTTPut Command Generator</a></li>
