--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <li><a href="https://tooln.github.io/NucleiCommandGenerator" target="_blank" draggable="true">Nuclei Command Generator</a></li>
     <li><a href="https://tooln.github.io/HTTPutCommandGenerator" target="_blank" draggable="true">HTTPut Command Generator</a></li>
     <li><a href="https://tooln.github.io/SubfinderCommandGenerator" target="_blank" draggable="true">Subfinder Command Generator</a></li>
-    <li><a href="https://tooln.github.io/godaddy_domain_registration" target="_blank" draggable="true">Godaddy Domain Registration</a></li>
+    <li><a href="https://tooln.github.io/Domain_Availability_Checker" target="_blank" draggable="true">Domain Availability Checker</a></li>
 
   </ul>
 </div>
