--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <li><a href="https://tooln.github.io/SubRecon" target="_blank" draggable="true">SubRecon</a></li>
     <li><a href="https://tooln.github.io/Broken_link_Cheacker" target="_blank" draggable="true">BLH Tester</a></li>
     <li><a href="https://tooln.github.io/IFRAME-Checker" target="_blank" draggable="true">IFRAME Checker</a></li>
-    <li><a href="https://tooln.github.io/Bulk-URL-Opener" target="_blank" draggable="true">Bulk URL Opener</a></li>
+    <li><a href="https://tooln.github.io/LinkOpenerPro/" target="_blank" draggable="true">LinkOpenerPro</a></li>
     <li><a href="https://tooln.github.io/OpenBugBounty_Report_Checker" target="_blank" draggable="true">Open Bug Bounty</a></li>
     <li><a href="https://tooln.github.io/Redirect_link_Tester" target="_blank" draggable="true">Redirect Link Tester</a></li>
     <li><a href="https://tooln.github.io/XSS-Param-Changer" target="_blank" draggable="true">XSS Param Changer</a></li>
