--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <li><a href="https://tooln.github.io/IFRAME-Checker" target="_blank" draggable="true">IFRAME Checker</a></li>
     <li><a href="https://tooln.github.io/LinkOpenerPro/" target="_blank" draggable="true">LinkOpenerPro</a></li>
     <li><a href="https://tooln.github.io/OpenBugBounty_Report_Checker" target="_blank" draggable="true">Open Bug Bounty</a></li>
-    <li><a href="https://tooln.github.io/Redirect_link_Tester" target="_blank" draggable="true">Redirect Link Tester</a></li>
+    <li><a href="https://tooln.github.io/RedirectLinkTester" target="_blank" draggable="true">Redirect Link Tester</a></li>
     <li><a href="https://tooln.github.io/XSS-Param-Changer" target="_blank" draggable="true">XSS Param Changer</a></li>
     <li><a href="https://tooln.github.io/FFUF-CMD-GENERATOR" target="_blank" draggable="true">FFUF CMD Generator V1</a></li>
     <li><a href="https://tooln.github.io/FFUF_Command_Generator" target="_blank" draggable="true">FFUF CMD Generator V2</a></li>
