--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
       <li><a href="https://tooln.github.io/HTTPutCommandGenerator" target="_blank" draggable="true">HTTPut Command Generator</a></li>
       <li><a href="https://tooln.github.io/SubfinderCommandGenerator" target="_blank" draggable="true">Subfinder Command Generator</a></li>
       <li><a href="https://tooln.github.io/Domain_Availability_Checker" target="_blank" draggable="true">Domain Availability Checker</a></li>
+      <li><a href="https://tooln.github.io/domain_to_link_converter" target="_blank" draggable="true">Domain To Link Converter</a></li>
     </ul>
   </div>
 </div>
